# polaris_et

./: .gitattributes  .gitignore  .identity  AGENTS.md  BUILDING.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  README.md  README.zh.md  build.rs
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml
homepage/: README.md  build.ts  content.ts  dev.ts  package.json  privacy.ts  serve.ts  tsconfig.json
homepage/public/: styles.css
locales/: en.json  zh.json
packaging/: AppxManifest.xml  PACKAGING.md  bundle-msix.ps1  pack-msix.ps1  polaris.iss
packaging/store/: README.md
src/: autostart.rs  config.rs  dialog.rs  elevate.rs  engine.rs  i18n.rs  instance.rs  logging.rs  main.rs  tray.rs  ui.rs
src/i18n/: zh.rs
